--- a/view-ejs/beranda.ejs
+++ b/view-ejs/beranda.ejs
@@ -1,3 +1,4 @@
 <h1>Selamat Datang di aplikasi saya</h1>
 <hr>
-<a href="/profil">menuju ke profil</a>
+<a href="/profil">menuju ke profil</a><br>
+<a href="/karyawan">menuju ke halaman karyawan</a><br>
