--- a/view-ejs/karyawan/detail.ejs
+++ b/view-ejs/karyawan/detail.ejs
@@ -6,38 +6,41 @@
 </a>
 <br><br>
 
-<table>
-    <tr>
-        <td>NIP</td>
-        <td>: <%= dakar[0].nip %></td>
-    </tr>
-    <tr>
-        <td>Nama</td>
-        <td>: <%= dakar[0].nama %></td>
-    </tr>
-    <tr>
-        <td>Jenis Kelamin</td>
-        <td>: <%= dakar[0].gender %></td>
-    </tr>
-    <tr>
-        <td>Alamat tinggal</td>
-        <td>: <%= dakar[0].alamat %></td>
-    </tr>
-    <tr>
-        <td>Tanggal lahir</td>
-        <td>: <%= dakar[0].tanggal_lahir %></td>
-    </tr>
-    <tr>
-        <td>Nomor Telepon</td>
-        <td>: <%= dakar[0].nomor_telp %></td>
-    </tr>
-    <tr>
-        <td>Departemen</td>
-        <td>: <%= dakar[0].dept_nama %> (<%= dakar[0].singkatan %>)</td>
-    </tr>
-    <tr>
-        <td>Agama</td>
-        <td>: <%= dakar[0].agama_nama %></td>
-    </tr>
-</table>
-<br>
+<% if (dakar[0]) { %>
+    <table>
+        <tr>
+            <td>NIP</td>
+            <td>: <%= dakar[0].nip %></td>
+        </tr>
+        <tr>
+            <td>Nama</td>
+            <td>: <%= dakar[0].nama %></td>
+        </tr>
+        <tr>
+            <td>Jenis Kelamin</td>
+            <td>: <%= dakar[0].gender %></td>
+        </tr>
+        <tr>
+            <td>Alamat tinggal</td>
+            <td>: <%= dakar[0].alamat %></td>
+        </tr>
+        <tr>
+            <td>Tanggal lahir</td>
+            <td>: <%= dakar[0].tanggal_lahir %></td>
+        </tr>
+        <tr>
+            <td>Nomor Telepon</td>
+            <td>: <%= dakar[0].nomor_telp %></td>
+        </tr>
+        <tr>
+            <td>Departemen</td>
+            <td>: <%= dakar[0].dept_nama %> (<%= dakar[0].singkatan %>)</td>
+        </tr>
+        <tr>
+            <td>Agama</td>
+            <td>: <%= dakar[0].agama_nama %></td>
+        </tr>
+    </table>
+<% } else { %>
+    <h2>Data tidak ditemukan</h2>
+<% } %>
