--- a/view-ejs/karyawan/index.ejs
+++ b/view-ejs/karyawan/index.ejs
@@ -7,6 +7,11 @@
     }
 </style>
 
+<a href="/karyawan/tambah">
+    <button>+ karyawan baru</button>
+</a>
+<br><br>
+
 <table border="1">
     <thead>
         <tr>
