fitur edit karyawan

--- a/view-ejs/karyawan/detail.ejs
+++ b/view-ejs/karyawan/detail.ejs
@@ -26,7 +26,7 @@
         </tr>
         <tr>
             <td>Tanggal lahir</td>
-            <td>: <%= dakar[0].tanggal_lahir %></td>
+            <td>: <%= moment(dakar[0].tanggal_lahir).format('dddd, DD MMMM YYYY') %></td>
         </tr>
         <tr>
             <td>Nomor Telepon</td>
