--- a/view-ejs/karyawan/index.ejs
+++ b/view-ejs/karyawan/index.ejs
@@ -29,6 +29,9 @@
                     <a href="/karyawan/detail/<%= dakar[i].id %>" style="margin-right: 10px;">
                         <button>Detail</button>
                     </a>
+                    <a href="/karyawan/edit/<%= dakar[i].id %>" style="margin-right: 10px;">
+                        <button>Edit</button>
+                    </a>
                     <a href="/karyawan/hapus/<%= dakar[i].id %>" onclick="return confirm('Yakin ingin hapus karyawan a/n <%= dakar[i].nama %> ?\nHati-hati! Data yang dihapus bersifat permanen!')">
                         <button>Hapus</button>
                     </a>
