--- a/view-ejs/karyawan/index.ejs
+++ b/view-ejs/karyawan/index.ejs
@@ -7,6 +7,13 @@
     }
 </style>
 
+<% if (typeof notif !== 'undefined') { %>
+    <span style="color: blueviolet">
+        <%= notif %>
+    </span>
+    <br><br>
+<% } %>
+
 <a href="/karyawan/tambah">
     <button>+ karyawan baru</button>
 </a>
