--- a/view-ejs/beranda.ejs
+++ b/view-ejs/beranda.ejs
@@ -1,4 +1,30 @@
-<h1>Selamat Datang di aplikasi saya</h1>
-<hr>
-<a href="/profil">menuju ke profil</a><br>
-<a href="/karyawan">menuju ke halaman karyawan</a><br>
+<!DOCTYPE html>
+<html lang="en" data-bs-theme="auto">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <title>Jumbotrons · Bootstrap v5.3</title>
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="jumbotrons.css">
+        <link rel="stylesheet" href="custom/css/template.css">
+    </head>
+    <body>
+        <div class="container my-5">
+            <div class="p-5 text-center bg-body-tertiary rounded-3 shadow">
+                <img src="img/dosencoding-bw.png" alt="" class="bi mt-4 mb-3" width="150">
+                <h1 class="text-body-emphasis">Selamat Datang</h1>
+                <p class="col-lg-8 mx-auto fs-5 text-muted">
+                    Selamat datang di Sistem Sumber Daya Manusia PT Aji Teknologi Solusi
+                </p>
+                <div class="d-inline-flex gap-2 mb-5">
+                    <a href="/login" class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill shadow-sm">
+                        Login Karyawan
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <script src="bootstrap/js/bootstrap.min.js"></script>
+    </body>
+</html>
