--- a/view-ejs/beranda.ejs
+++ b/view-ejs/beranda.ejs
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <title>Jumbotrons · Bootstrap v5.3</title>
+        <title>Sistem SDM - Beranda</title>
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="custom/css/template.css">
         <script src="bootstrap/js/bootstrap.min.js"></script>
