--- a/view-ejs/karyawan/index.ejs
+++ b/view-ejs/karyawan/index.ejs
@@ -1,3 +1,5 @@
+<%- include('../layout/head') %>
+
 <h1>Karyawan Index</h1>
 <hr>
 
@@ -47,3 +49,6 @@
         <% } %>
     </tbody>
 </table>
+
+
+<%- include('../layout/foot') %>
