--- a/view-ejs/karyawan/index.ejs
+++ b/view-ejs/karyawan/index.ejs
@@ -1,13 +1,6 @@
 <%- include('../layout/head') %>
 
-<h1>Karyawan Index</h1>
-<hr>
 
-<style>
-    .p5 {
-        padding: 5px;
-    }
-</style>
 
 <% if (typeof notif !== 'undefined') { %>
     <span style="color: blueviolet">
@@ -16,39 +9,58 @@
     <br><br>
 <% } %>
 
-<a href="/karyawan/tambah">
-    <button>+ karyawan baru</button>
-</a>
-<br><br>
+<div class="row">
+    <div class="col-12">
+        <h1 class="h2">Karyawan Index</h1><hr>
+    </div>
+</div>
 
-<table border="1">
-    <thead>
-        <tr>
-            <th class="p5">NIP</th>
-            <th class="p5">Nama Lengkap</th>
-            <th class="p5">Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% for( let i=0;  i < dakar.length;  i++ ) { %>
-            <tr>
-                <td class="p5"><%= dakar[i].nip %></td>
-                <td class="p5"><%= dakar[i].nama %></td>
-                <td class="p5">
-                    <a href="/karyawan/detail/<%= dakar[i].id %>" style="margin-right: 10px;">
-                        <button>Detail</button>
-                    </a>
-                    <a href="/karyawan/edit/<%= dakar[i].id %>" style="margin-right: 10px;">
-                        <button>Edit</button>
-                    </a>
-                    <a href="/karyawan/hapus/<%= dakar[i].id %>" onclick="return confirm('Yakin ingin hapus karyawan a/n <%= dakar[i].nama %> ?\nHati-hati! Data yang dihapus bersifat permanen!')">
-                        <button>Hapus</button>
-                    </a>
-                </td>
-            </tr>
-        <% } %>
-    </tbody>
-</table>
+
+
+<div class="row">
+    <div class="col-12">
+
+        <div class="card">
+            <div class="card-header text-end">
+                <a href="/karyawan/tambah" class="btn btn-primary">
+                    + Karyawan baru
+                </a>
+            </div>
+            <div class="card-body">
+                <table class="table table-sm table-hover">
+                    <thead>
+                        <tr>
+                            <th class="p5">NIP</th>
+                            <th class="p5">Nama Lengkap</th>
+                            <th class="p5">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody class="table-group-divider">
+                        <% for( let i=0;  i < dakar.length;  i++ ) { %>
+                            <tr>
+                                <td class="p5"><%= dakar[i].nip %></td>
+                                <td class="p5"><%= dakar[i].nama %></td>
+                                <td class="p5">
+                                    <a href="/karyawan/detail/<%= dakar[i].id %>" class="btn btn-sm btn-info">
+                                        Detail
+                                    </a>
+                                    <a href="/karyawan/edit/<%= dakar[i].id %>" class="btn btn-sm btn-warning">
+                                        Edit
+                                    </a>
+                                    <a href="/karyawan/hapus/<%= dakar[i].id %>" class="btn btn-sm btn-danger" onclick="return confirm('Yakin ingin hapus karyawan a/n <%= dakar[i].nama %> ?\nHati-hati! Data yang dihapus bersifat permanen!')">
+                                        Hapus
+                                    </a>
+                                </td>
+                            </tr>
+                        <% } %>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 
 
 <%- include('../layout/foot') %>
