--- a/view-ejs/layout/head.ejs
+++ b/view-ejs/layout/head.ejs
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="" />
         <title>Sistem SDM - Login</title>
-        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="custom/css/dashboard.css">
-        <link rel="stylesheet" href="fontawesome-6.7.2/css/all.min.css">
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <script src="fontawesome-6.7.2/js/all.min.js"></script>
+        <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/custom/css/dashboard.css">
+        <link rel="stylesheet" href="/fontawesome-6.7.2/css/all.min.css">
+        <script src="/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/fontawesome-6.7.2/js/all.min.js"></script>
     </head>
     <body>
         <%- include('navbar-atas') %>
