--- a/view-ejs/karyawan/form-edit.ejs
+++ b/view-ejs/karyawan/form-edit.ejs
@@ -12,9 +12,9 @@
     <br><br>
 <% } %>
 
-<form action="/karyawan/proses-update/<%= dakar[0].id %>" method="post">
-    <div class="row">
-        <div class="col-lg-6">
+<div class="row">
+    <div class="col-lg-6">
+        <form action="/karyawan/proses-update/<%= dakar[0].id %>" method="post">
             <div class="mb-3">
                 <label class="form-label">Nama lengkap</label>
                 <input class="form-control" type="text" name="form_namalengkap" value="<%= dakar[0].nama %>">
@@ -61,13 +61,38 @@
                     <% }) %>
                 </select>
             </div>
-        </div>
+            <button type="submit" class="btn btn-primary">
+                <i class="fa-solid fa-floppy-disk me-1"></i> Update Data
+            </button>
+        </form>
     </div>
 
-    <button type="submit" class="btn btn-primary">
-        <i class="fa-solid fa-floppy-disk me-1"></i> Update
-    </button>
-</form>
+    <div class="col-lg-6">
+        <form action="/karyawan/proses-update-foto/<%= dakar[0].id %>" method="post" enctype="multipart/form-data">
+            <label class="form-label">Upload Foto</label>
+            <input type="file" name="form_fotokaryawan" class="form-control" required>
+
+            <div class="form-text text-danger mb-3">
+                <i class="fa-solid fa-info-circle"></i> Tidak perlu diisi jika tidak ingin ganti foto
+            </div>
+
+            <button type="submit" class="btn btn-warning mb-2">
+                <i class="fa-solid fa-floppy-disk me-1"></i> Update Foto
+            </button>
+
+            <div>
+                <% if (dakar[0].foto) { %>
+                    <img class="img-thumbnail bg-light" src="/upload-image/<%= dakar[0].foto %>" alt="foto <%= dakar[0].nama %>">
+                <% } else { %>
+                    <img class="img-thumbnail" src="/img/image-placeholder.png" alt="foto <%= dakar[0].nama %>">
+                <% } %>
+            </div>
+        </form>
+    </div>
+</div>
+
+
+
 
 
 <%- include('../layout/foot') %>
